# DinamicalReuse

./: CMakeLists.txt  README.md
DinamicalReuse/: DinamicalReuse.pro  list_widget.cpp  list_widget.h  main.cpp  qdynamicbutton.h
DynamicalReuse/: CMakeLists.txt  DynReuse.pro  DynamicalReuse.pro  base_items.cpp  base_items.h  custom_listview.cpp  custom_listview.h  custom_view.cpp  custom_view.h  list_model.cpp  list_model.h  list_model_delegate.cpp  list_model_delegate.h  listmode_delegate.cpp  listmodel_delegate.cpp  listmodel_delegate.h  main.cpp  main_window.cpp  main_window.h
